k8s/nginx/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
   # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/whitelist-source-range: "34.87.134.216/32"
  # generation: 2
  # labels:
    # app: kibana
  name: example-service-ingress
spec:
  rules:
  - host: example-service.local
    http:
      paths:
        # - path: /
        #   pathType: Prefix
        #   backend:
        #     service:
        #       name: web
        #       port:
        #         number: 8080
      - backend:
          service:
            name: example-service
            port:
              number: 8080
        path: /
        pathType: Prefix
